--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@koa/router": "^10.1.1",
+    "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.2",
     "koa": "^2.13.4",
