--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,21 +20,38 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.5.0",
+    "antd": "^4.20.4",
+    "axios": "^0.27.2",
+    "axios-retry": "^3.2.5",
     "crypto-js": "^4.1.1",
-    "react": "17.x",
+    "dayjs": "^1.11.2",
+    "echarts": "^5.3.2",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
+    "react": "17.0.2",
     "react-dom": "17.x",
+    "react-router": "^6.3.0",
+    "redux": "^4.2.0",
     "umi": "^3.5.23"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/js-cookie": "^3.0.2",
+    "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.23",
+    "dva-core": "^1.6.0-0",
+    "eslint": "^8.15.0",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
-    "typescript": "^4.1.2",
+    "redbox-react": "^1.6.0",
+    "typescript": "^4.6.4",
     "yorkie": "^2.0.0"
   }
 }
