--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "build-watch": "tsc -w",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "zip": "zip -r deploy.zip dist static package.json ecosystem.config.js"
   },
   "keywords": [],
   "author": "",
