--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,14 @@
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "build-watch": "tsc -w",
-    "serve": "node dist/index.js",
+    "build:dev": "tsc -w",
+    "build:prod": "tsc",
+    "serve:dev": "pm2 start ecosystem.config.js --only basf-test --no-daemon",
+    "serve:prod": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --only basf",
+    "stop:dev": "pm2 stop basf-test",
+    "stop:prod": "pm2 stop basf",
+    "dev": "concurrently \"npm:build:dev\" \"npm:serve:dev\"",
+    "deploy": "npm run build:prod && npm run zip",
     "zip": "zip -r deploy.zip dist static package.json ecosystem.config.js"
   },
   "keywords": [],
@@ -28,6 +34,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/formidable": "^2.0.5",
     "@types/koa": "^2.13.4",
     "@types/koa-compose": "^3.2.5",
     "@types/koa-static": "^4.0.2",
@@ -36,7 +43,11 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
+    "concurrently": "^7.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
+    "formidable": "^2.0.1",
+    "pm2": "^5.2.0",
     "typescript": "^4.6.4"
   }
 }
