--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "build:dev": "tsc -w",
     "build:prod": "tsc",
-    "serve:dev": "pm2 start ecosystem.config.js --only basf-test --no-daemon",
+    "serve:dev": "pm2 start ecosystem.config.js --only basf-test --watch --no-daemon",
     "serve:prod": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --only basf",
     "stop:dev": "pm2 stop basf-test",
     "stop:prod": "pm2 stop basf",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/formidable": "^2.0.5",
+    "@types/fs-extra": "^9.0.13",
     "@types/koa": "^2.13.4",
     "@types/koa-compose": "^3.2.5",
     "@types/koa-static": "^4.0.2",
@@ -47,6 +48,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.15.0",
     "formidable": "^2.0.1",
+    "fs-extra": "^10.1.0",
+    "log4js": "^6.4.7",
     "pm2": "^5.2.0",
     "typescript": "^4.6.4"
   }
