--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
     "build": "tsc",
     "build:dev": "tsc -w",
     "build:prod": "cp src/config/.prod.ts src/config/prod.ts && tsc && cp src/config/local.ts src/config/prod.ts",
-    "serve:dev": "pm2 start ecosystem.config.js --only basf-test --watch --no-daemon",
-    "serve:prod": "cross-env NODE_ENV=production pm2 start ecosystem.config.js --only basf",
+    "serve:dev": "pm2 restart ecosystem.config.js --only basf-test --watch --no-daemon",
+    "serve:prod": "cross-env NODE_ENV=production pm2 restart ecosystem.config.js --only basf",
     "stop:dev": "pm2 stop basf-test",
     "stop:prod": "pm2 stop basf",
     "dev": "concurrently \"npm:build:dev\" \"npm:serve:dev\"",
