feat: update readme

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "serve:prod": "cross-env NODE_ENV=production pm2 restart ecosystem.config.js --only basf",
     "stop:dev": "pm2 stop basf-test",
     "stop:prod": "pm2 stop basf",
-    "dev": "concurrently \"npm:build:dev\" \"npm:serve:dev\"",
+    "dev": "npm run build && concurrently \"npm:build:dev\" \"npm:serve:dev\"",
     "deploy": "npm run build:prod && npm run zip",
     "zip": "zip -r deploy.zip dist static package.json ecosystem.config.js"
   },
